@@ -51,10 +51,7 @@ extern const ASM_MAPPINGS asm_asxxxx_mapping;
 /* The default mapping for small (<16 bit word) Padauk architectures.
  */
 extern const ASM_MAPPINGS asm_asxxxx_smallpdk_mapping;
-#if 0
-/* not used */
 extern const ASM_MAPPINGS asm_gas_mapping;
-#endif
 extern const ASM_MAPPINGS asm_a390_mapping;
 
 /** Last entry has szKey = NULL.
